--- a/package.json
+++ b/package.json
@@ -5,13 +5,24 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "client": "next start",
+    "lint": "next lint",
+    "setupDocker": "docker build -t restful-api . && docker run -d -p 27017:27017 --name docker-restful-api restful-api",
+    "cleanDocker": "docker rm -f docker-restful-api",
+    "startDocker": "docker start docker-restful-api",
+    "stopDocker": "docker stop docker-restful-api",
+    "devStart": "nodemon npm run dev && npm run startDocker",
+    "server": "npm run startDocker && node index.js",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "develop": "concurrently \"npm run devStart\" \"npm run client\""
   },
+  "author": "Johannes Ström, Robin Sevelin, Jimme Häglund, Josefin Olsson",
+  "license": "ISC",
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "next": "14.1.4",
+    "mongoose": "^8.0.0"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -22,6 +33,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "eslint-config-next": "14.1.4",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.1"
   }
 }
