--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "next build",
     "client": "next start",
     "lint": "next lint",
-    "setupDocker": "docker build -t restful-api . && docker run -d -p 27017:27017 --name docker-restful-api restful-api",
-    "cleanDocker": "docker rm -f docker-restful-api",
-    "startDocker": "docker start docker-restful-api",
-    "stopDocker": "docker stop docker-restful-api",
+    "setupDocker": "docker build -t time-tracker-db . && docker run -d -p 27017:27017 --name docker-time-tracker-db time-tracker-db",
+    "cleanDocker": "docker rm -f docker-time-tracker-db",
+    "startDocker": "docker start docker-time-tracker-db",
+    "stopDocker": "docker stop docker-time-tracker-db",
     "develop": "npm run startDocker && npm run dev",
     "server": "npm run startDocker",
     "start": "concurrently \"npm run server\" \"npm run client\""
